test_cases/negative/item_not_found_import.snek
import "../lib.snek" as lib;

export DEFAULT = lib::secret;
